Fix loading animation being too long.

--- a/main.css
+++ b/main.css
@@ -54,7 +54,7 @@ ul, ol {
 	position: absolute;
 	top: 50%;
 	left: 50%;
-	transform: translate(-50%, -70%);
+	transform: translate(-50%, -73%);
 }
 .floatRight {
 	float: right;
